tests/paczka1/small_fuzzy/34320664.err
Error in line 4: jNRQ6dB36 S521 48,1
Error in line 5: nfTY1t A745 50,9
Error in line 9: nfTY1t S972 60,0
